[project]
name = "apibean-client"
version = "0.1.1a1"
description = "A Python API client with structured errors, presets, and notebook-friendly UX."
readme = "README.md"
license = 'GPL-3.0'
license-files = [ "LICENSE.txt" ]
keywords = [ 'restful-client' ]
authors = [
    { name = "skelethon" }
]
requires-python = ">=3.9,<4.0"
dependencies = [
    "httpx<1.0.0,>=0.25.1",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pydash>=8.0.5",
    "pytest<8.0.0,>=7.4.3",
    "pytest-cov<4.0.0,>=3.0.0",
    "mypy<2.0.0,>=1.8.0",
]
lint = [
    "ruff<1.0.0,>=0.2.2",
    "pre-commit<4.0.0,>=3.6.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = "test_*.py"
